Fix dropdown alignment issues

--- a/sass/navigation/_nav-desktop.scss
+++ b/sass/navigation/_nav-desktop.scss
@@ -172,7 +172,7 @@ $use-dropdown-toggle-animation: true;
     border-top-left-radius: var(--border-radius-sub-menu);
     border-top-right-radius: var(--border-radius-sub-menu);
     box-shadow: 0 25px 20px -10px rgb(5 4 25 / .05);
-    left: 5%;
+    left: 0;
     margin-left: 0;
     margin-top: var(--gap-dropdown);
     opacity: 0;
